--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -33,7 +33,7 @@ body
 .order-header-button
     margin: 3px
     border-radius: 0 !important
-    background: #ff4700
+    background: #35d22a //#ff4700
     border: none
     height: 32px
     padding: 3px 10px
@@ -41,13 +41,13 @@ body
     box-shadow: 0 0 3px 0px #222222
 
     &:hover
-        background: darken(#ff4700, 10%)
+        background: darken(#35d22a, 10%)
 
     &:focus
-        background: darken(#ff4700, 10%)
+        background: darken(#35d22a, 10%)
 
     &:active:focus
-        background: darken(#ff4700, 10%)
+        background: darken(#35d22a, 10%)
 
 .table-block
     overflow: auto
@@ -224,8 +224,6 @@ body.admin
         box-shadow: 0 0 5px 0px #222222
         background: white !important
 
-:focus
-    background: none
 
 .top-line
     min-height: 50px
@@ -234,7 +232,7 @@ body.admin
     font-weight: bold
     font-size: 16px
     padding-top: 4px
-    background: #23c9ee //#6f6356 //#EE8B24
+    background: #dc4545 //#23c9ee //#6f6356 //#EE8B24
     font-weight: bold
     padding: 0
     box-shadow: 0 2px 5px 0 #949494
@@ -374,7 +372,7 @@ section
 @import 'components/Button'
 
 ul.navbar-nav > li > a:hover
-    background: #23c9ee !important // #23c9ee //#6f6356 !important //#EE8B24 !important
+    background: #dc4545 !important //#23c9ee !important // #23c9ee //#6f6356 !important //#EE8B24 !important
     color: white !important
 
 ul.navbar-nav > li > a
@@ -416,7 +414,7 @@ tr td:first-child
     > a,
     > a:hover,
     > a:focus
-        background: #23c9ee //#6f6356 //#EE8B24
+        background: #dc4545 //#23c9ee //#6f6356 //#EE8B24
         color: white !important
 
 .navbar-inverse .navbar-nav > li > a
