--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -126,7 +126,7 @@ img
 
 
 .page
-    background: white
+    background: #e6e6e6 // #f3f3f3
     padding: 150px 0 50px
 
 body.admin
@@ -235,7 +235,7 @@ body.admin
     background: #dc4545 //#23c9ee //#6f6356 //#EE8B24
     font-weight: bold
     padding: 0
-    box-shadow: 0 2px 5px 0 #949494
+    box-shadow: 0 2px 2px 0px #353535
 
     span
         margin: 0 10px
@@ -243,6 +243,8 @@ body.admin
     @media screen and (max-width: 768px)
         text-align: center
 
+.gray-section
+    background: #e6e6e6 //#f3f3f3
 
 .search-button
     position: absolute
