--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -1,8 +1,21 @@
 .Button
-    background-color: #ee8b24
+    background-color: #dc4545 
+    border-radius: 0
+    padding: 10px
+    border-bottom: 5px solid darken(#dc4545, 30%)
+    height: 46px
 
     &:hover,
     &:active,
     &:focus
-        background-color: darken(#ee8b24, 15%)
+        background-color: darken(#dc4545, 15%)
         color: white
+
+    &--orange
+        background-color: #ff782a
+
+        &:hover,
+        &:active,
+        &:focus
+            background-color: darken(#ff782a, 15%)
+            color: white
