--- a/resources/assets/stylus/components/Footer.styl
+++ b/resources/assets/stylus/components/Footer.styl
@@ -6,7 +6,7 @@
         &:hover,
         &:active,
         &:focus
-            color: #EE3B24
+            color: #dc4545
             cursor: pointer
 
     &__menu-item
