--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -39,6 +39,7 @@ body
     padding: 3px 10px
     margin-top: 9px
     box-shadow: 0 0 3px 0px #222222
+    margin: 10px 0
 
     &:hover
         background: darken(#35d22a, 10%)
@@ -76,7 +77,8 @@ a
         color: white
 
 .goup-container
-    background-color: #EE3B24 !important
+    background-color:#dc4545 !important
+    border-radius: 0 !important
 
 img
     width: 100%
@@ -135,19 +137,26 @@ body.admin
 .admin .page
     padding: 50px 0
 
+.article
+    margin: 50px 0
 
 .chimney,
 .briquette,
+.article,
 .boiler,
 .order,
+.photo-description,
 .admin .article
-    margin: 50px 0
+    margin: 0 0 50px 0
     clear: fix
     border: 1px solid #E0E0E0
     padding: 20px
     background: #F3F3F3
-    border-radius: 4px
+    box-shadow: 0 2px 1px #b7b7b7
 
+.photo-description
+    min-height: 250px
+    position: relative
 
 .admin .article
     min-height: 550px
@@ -209,7 +218,7 @@ body.admin
 
 .search_input
     border: none 
-    height: 30px
+    height: 32px
     margin: 10px 0
     width: 300px
     color: black
@@ -217,11 +226,10 @@ body.admin
     font-weight: normal
     padding: 0 10px
     background: white
-    box-shadow: none
+    box-shadow: 0 0 5px 0px #222222
     transition: box-shadow 0.2s ease-in-out
 
     &:focus
-        box-shadow: 0 0 5px 0px #222222
         background: white !important
 
 
@@ -392,7 +400,7 @@ h3
 
 .divider
     margin-bottom: 50px
-    background: #ee8b24
+    background: #dc4545 // #ee8b24
 
 .thumbnail
     border: none
@@ -479,5 +487,8 @@ tr td:first-child
 .pagination>.active>span,
 .pagination>.active>span:focus,
 .pagination>.active>span:hover
-    background-color: #EE3B24
-    border-color: #EE3B24
+    background-color: #dc4545
+    border-color: #dc4545
+
+.pagination-wrapper
+    text-align: center
