--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -4,6 +4,14 @@
     padding: 10px
     border-bottom: 5px solid darken(#dc4545, 30%)
     height: 46px
+    color: white
+    margin-top: 20px
+
+
+    &--more
+        position: absolute
+        right: 40px
+        bottom: 40px
 
     &:hover,
     &:active,
@@ -19,3 +27,14 @@
         &:focus
             background-color: darken(#ff782a, 15%)
             color: white
+
+    &--green
+        background-color: #30bd26
+
+        &:hover,
+        &:active,
+        &:focus
+            background-color: darken(#30bd26, 15%)
+            color: white
+
+        border-bottom: 5px solid darken(#30bd26, 30%)
