drastically improve styles

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,12 +2,12 @@ h3 {
   text-transform: none !important;
 }
 .search-results {
-  background: #23c9ee;
+  background: #dc4545;
   font-size: 18px;
   padding: 20px;
   color: #fff;
   display: inline-block;
-  box-shadow: 3px 3px 5px 0 #8a8a8a;
+  box-shadow: 1px 1px 1px 0px #212121;
 }
 .query-string {
   color: #ff0;
@@ -134,6 +134,7 @@ img {
 .page {
   background: #e6e6e6;
   padding: 150px 0 50px;
+  min-height: calc(100vh - 76px);
 }
 body.admin {
   background: #2c2c2c;
@@ -183,20 +184,22 @@ body.admin {
   padding: 20px;
 }
 .photo-expanded,
-.article-expanded {
+.article-expanded,
+.resource-expanded {
   background: #f3f3f3;
   box-shadow: 0 2px 1px #b7b7b7;
   margin-top: 20px;
   padding: 0 40px 40px;
 }
 .photo-expanded img,
-.article-expanded img {
+.article-expanded img,
+.resource-expanded img {
   box-shadow: 0 0 5px 1px #868686;
 }
 .main-block {
   background: #f3f3f3;
   box-shadow: 0 2px 1px #b7b7b7;
-  margin-top: 20px;
+  margin: 20px 0 50px 0;
   background: #fff;
   padding: 50px;
 }
@@ -3054,7 +3057,10 @@ textarea:hover {
   color: #fff;
   margin-top: 20px;
 }
-.Button--more {
+.Button__more {
+  float: right;
+}
+.Button__more--positioned {
   position: absolute;
   right: 40px;
   bottom: 40px;
@@ -3153,12 +3159,23 @@ tr td:first-child {
 .single-feature {
   background: #eee;
   transition: none;
+  border-radius: 0;
 }
 .single-feature:after {
   transition: none;
 }
+.nav-tabs a {
+  padding: 0 !important;
+}
 .catalog-img {
   max-height: 240px !important;
+}
+.carousel-block {
+  margin-top: 50px !important;
+}
+.glyphicon-chevron-left,
+.glyphicon-chevron-right {
+  font-size: 12px;
 }
 .single-feature:hover {
   background: #ee8b24;
