--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -7,8 +7,10 @@
     color: white
     margin-top: 20px
 
+    &__more
+        float: right
 
-    &--more
+    &__more--positioned
         position: absolute
         right: 40px
         bottom: 40px
