--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,12 +1,21 @@
 h3 {
   text-transform: none !important;
 }
+.reset-search-link {
+  margin-top: 30px;
+  color: #8e8e8e;
+  font-size: 16px;
+}
+.reset-search-link:hover {
+  color: #505050;
+}
 .search-results {
   background: #dc4545;
   font-size: 18px;
   padding: 20px;
   color: #fff;
   display: inline-block;
+  margin-bottom: 20px;
   box-shadow: 1px 1px 1px 0px #212121;
 }
 .query-string {
