--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,12 +1,21 @@
 h3
     text-transform: none !important
 
+.reset-search-link
+    margin-top: 30px
+    color: #8e8e8e
+    font-size: 16px
+
+    &:hover
+        color: #505050
+
 .search-results
     background: #dc4545 //#23c9ee
     font-size: 18px
     padding: 20px
     color: white
     display: inline-block
+    margin-bottom: 20px
     box-shadow: 1px 1px 1px 0px #212121
 
 .query-string
