--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -2,10 +2,12 @@
     background-color: #dc4545 
     border-radius: 0
     padding: 10px
-    border-bottom: 5px solid darken(#dc4545, 30%)
+    //border-bottom: 5px solid darken(#dc4545, 30%)
     height: 46px
     color: white
     margin-top: 20px
+    box-shadow: 0 1px 1px 0px #212121
+    font-size: 18px
 
     &__more
         float: right
@@ -39,4 +41,4 @@
             background-color: darken(#30bd26, 15%)
             color: white
 
-        border-bottom: 5px solid darken(#30bd26, 30%)
+        //border-bottom: 5px solid darken(#30bd26, 30%)
