--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -185,10 +185,9 @@ body.admin
         box-shadow: 0 0 5px 1px #868686
 
 .main-block
-    background: #F3F3F3
+    background: #f3f3f3
     box-shadow: 0 2px 1px #b7b7b7
     margin: 20px 0 50px 0
-    background: white
     padding: 50px
 
     h1
@@ -200,16 +199,6 @@ body.admin
     p
         font-size: 18px !important
 
-
-.admin .article
-    min-height: 550px
-    position: relative
-
-    .buttons
-        position: absolute
-        bottom: 20px 
-        right: 20px
-        width: 100%
 
 .photo
     min-height: 296px
