--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,6 +1,10 @@
 h3
     text-transform: none !important
 
+.logo
+    width: 32px
+    margin: 0 7px 7px 0
+
 .reset-search-link
     margin-top: 30px
     color: #8e8e8e
@@ -39,16 +43,20 @@ body
 .description
     font-size: 18px
 
+.search-form
+    text-align: left
+
+    @media screen and (max-width: 768px)
+        text-align: center
+
 .order-header-button
-    margin: 3px
+    margin-top: 10px
     border-radius: 0 !important
     background: #35d22a //#ff4700
     border: none
     height: 32px
     padding: 3px 10px
-    margin-top: 9px
     box-shadow: 0 0 3px 0px #222222
-    margin: 10px 0
 
     &:hover
         background: darken(#35d22a, 10%)
@@ -103,6 +111,10 @@ img
 .contacts
     margin: 15px 0
     color: #fffbc7 // white //bbb
+
+    @media screen and (max-width: 992px)
+        margin: 5px 0
+        text-align: center
 
 .contacts-small-screen
     display: none
@@ -252,7 +264,7 @@ body.admin
     border: none 
     height: 32px
     margin: 10px 0
-    width: 300px
+    width: 265px//300px
     color: black
     font-size: 16px
     font-weight: normal
@@ -300,7 +312,6 @@ body.admin
         max-height: 300px
 
 .navbar-toggle
-    background: #23c9ee //#ee8b24 !important
     margin-top: 15px
 
 input:hover,
