--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,6 +5,14 @@ h3 {
   width: 32px;
   margin: 0 7px 7px 0;
 }
+.logo-admin-login {
+  width: 64px;
+  display: block;
+  margin: 20px auto;
+}
+.logo-big {
+  width: 96px;
+}
 .reset-search-link {
   margin-top: 30px;
   color: #8e8e8e;
@@ -45,9 +53,9 @@ body {
 .search-form {
   text-align: left;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
   .search-form {
-    text-align: center;
+    text-align: right;
   }
 }
 .order-header-button {
@@ -155,6 +163,12 @@ img {
 }
 .submenu li:hover a {
   color: #000;
+}
+@media screen and (max-width: 768px) {
+  .page,
+  section {
+    padding-top: 200px !important;
+  }
 }
 .page {
   background: #e6e6e6;
@@ -290,7 +304,7 @@ body.admin {
   border: none;
   height: 32px;
   margin: 10px 0;
-  width: 265px;
+  width: 286px;
   color: #000;
   font-size: 16px;
   font-weight: normal;
@@ -339,6 +353,10 @@ body.admin {
 }
 .navbar-toggle {
   margin-top: 15px;
+}
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover {
+  background: #dc4545;
 }
 input:hover,
 textarea:hover,
@@ -523,7 +541,7 @@ a {
   position: relative;
   padding-bottom: 10px;
   color: #ee3b24 !important;
-  width: 45%;
+  width: 100%;
   margin: 10px auto;
   font-size: 40px;
   line-height: 50px;
@@ -2754,7 +2772,7 @@ ul.navbar-nav > li > a:hover,
   background: #000;
 }
 .navbar-toggle {
-  background: #dc4545;
+  background: #ff9142;
 }
 .navbar-brand span {
   color: #000;
@@ -3141,8 +3159,21 @@ h3 {
   margin-bottom: 50px;
   background: #dc4545;
 }
+.divider-orange {
+  background: #ff9142;
+}
 .thumbnail {
   border: none;
+}
+.enter-admin-button {
+  width: 100%;
+  font-weight: bold;
+  background: #ff9142;
+  color: #fff;
+}
+.enter-admin-button:hover {
+  background: #ff7512;
+  color: #fff;
 }
 .table {
   background: #fff;
@@ -3174,6 +3205,7 @@ tr td:first-child {
 .feature_header .feature_title {
   margin: 0;
   display: inline-block;
+  width: 100%;
 }
 .nav-logo {
   font-size: 22px;
