--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -5,6 +5,14 @@ h3
     width: 32px
     margin: 0 7px 7px 0
 
+    &-admin-login
+        width: 64px
+        display: block
+        margin: 20px auto
+
+    &-big
+        width: 96px
+
 .reset-search-link
     margin-top: 30px
     color: #8e8e8e
@@ -46,8 +54,8 @@ body
 .search-form
     text-align: left
 
-    @media screen and (max-width: 768px)
-        text-align: center
+    @media screen and (max-width: 992px)
+        text-align: right
 
 .order-header-button
     margin-top: 10px
@@ -147,6 +155,10 @@ img
             a
                 color: black 
 
+.page,
+section
+    @media screen and (max-width: 768px)
+        padding-top: 200px !important
 
 .page
     background: #e6e6e6 // #f3f3f3
@@ -264,7 +276,7 @@ body.admin
     border: none 
     height: 32px
     margin: 10px 0
-    width: 265px//300px
+    width: 286px//265px//300px
     color: black
     font-size: 16px
     font-weight: normal
@@ -313,6 +325,10 @@ body.admin
 
 .navbar-toggle
     margin-top: 15px
+
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover
+    background: #dc4545
 
 input:hover,
 textarea:hover,
@@ -445,8 +461,21 @@ h3
     margin-bottom: 50px
     background: #dc4545 // #ee8b24
 
+    &-orange
+        background: #ff9142
+
 .thumbnail
     border: none
+
+.enter-admin-button
+    width: 100%
+    font-weight: bold
+    background: #ff9142
+    color: white
+
+    &:hover
+        background: darken(#ff9142, 15%)
+        color: white
 
 .table
     background: white
@@ -480,6 +509,7 @@ tr td:first-child
     .feature_title
         margin: 0 
         display: inline-block
+        width: 100%
        // font-size: 26px
 
 .nav-logo
