--- a/resources/assets/stylus/red.styl
+++ b/resources/assets/stylus/red.styl
@@ -40,7 +40,7 @@ ul.navbar-nav > .active > a,ul.navbar-nav > li > a:hover,.carousel-caption h4
     background:#000 
 
 .navbar-toggle 
-    background: #dc4545 
+    background: #ff9142//#dc4545 
 
 
 .navbar-brand span
