--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -22,6 +22,10 @@
         right: 40px
         bottom: 40px
 
+        @media screen and (max-width: 992px)
+            position: static
+            float: right
+
     &:hover,
     &:active,
     &:focus
