--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,6 +1,15 @@
 h3
     text-transform: none !important
 
+.feature_header .feature_title
+    display: inline !important
+
+.top-line .container
+    padding: 0
+
+.row
+    margin: 0
+
 .logo
     width: 32px
     margin: 0 7px 7px 0
@@ -121,7 +130,7 @@ img
 
 .contacts
     margin: 15px 0
-    color: #fffbc7 // white //bbb
+    color: #e6e6e6  // #fffbc7 // white //bbb
 
     @media screen and (max-width: 992px)
         margin: 5px 0
@@ -191,7 +200,7 @@ body.admin
 .photo-description,
 .admin .article
     position: relative
-    margin: 0 10px 50px
+    margin: 0 0 50px
     clear: fix
     //border: 1px solid #E0E0E0
     padding: 40px
@@ -215,7 +224,7 @@ body.admin
     background: #F3F3F3
     box-shadow: 0 2px 1px #b7b7b7
     padding: 0 40px 40px
-    margin: 0 10px
+    margin: 0 0 
 
     img
         box-shadow: 0 0 5px 1px #868686
