--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,15 @@
 h3 {
   text-transform: none !important;
 }
+.feature_header .feature_title {
+  display: inline !important;
+}
+.top-line .container {
+  padding: 0;
+}
+.row {
+  margin: 0;
+}
 .logo {
   width: 32px;
   margin: 0 7px 7px 0;
@@ -121,7 +130,7 @@ img {
 }
 .contacts {
   margin: 15px 0;
-  color: #fffbc7;
+  color: #e6e6e6;
 }
 @media screen and (max-width: 992px) {
   .contacts {
@@ -211,7 +220,7 @@ body.admin {
 .photo-description,
 .admin .article {
   position: relative;
-  margin: 0 10px 50px;
+  margin: 0 0 50px;
   padding: 40px;
   background: #f3f3f3;
   box-shadow: 0 2px 1px #b7b7b7;
@@ -241,7 +250,7 @@ body.admin {
   background: #f3f3f3;
   box-shadow: 0 2px 1px #b7b7b7;
   padding: 0 40px 40px;
-  margin: 0 10px;
+  margin: 0 0;
 }
 .photo-expanded img,
 .article-expanded img,
@@ -3124,7 +3133,7 @@ textarea:hover {
   right: 40px;
   bottom: 40px;
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
   .Button__more--positioned {
     position: static;
     float: right;
