--- a/resources/assets/stylus/components/Button.styl
+++ b/resources/assets/stylus/components/Button.styl
@@ -14,6 +14,10 @@
         right: 20px
         bottom: 20px
 
+        @media screen and (max-width: 1200px)
+            position: static
+            float: right
+
     &__more
         float: right
 
